<resources>
    <string name="app_name" translatable="false">Manager</string>
    <string name="description_info" translatable="false">Info</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="SEND">SEND</string>
    <string name="SIGN_IN">Login</string>
    <string name="SIGN_UP">Sign up</string>
    <string name="action_location">Locations</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="cancel">Cancel</string>
    <string name="chat_wall_message_hint">Write a message</string>
    <string name="close">close</string>
    <string name="confirm_email">We\'ll send you an email to %1s to reset your password</string>
    <string name="contact_number_title">Contact number</string>
    <string name="contacts_last_message_default">Message</string>
    <string name="contacts_last_message_image">Image</string>
    <string name="contacts_last_message_location">Location</string>
    <string name="contacts_last_message_video" translatable="false">Video</string>
    <string name="contacts_last_message_audio" translatable="false">Audio</string>
    <string name="cr4ZYMKINHp">Women\'s Clothing</string>
    <string name="cuRzYgo8krw">Women Shoes</string>
    <string name="cydPTRrUJye">Health</string>
    <string name="cDvl63HGh9j" translatable="false">Retailers</string>
    <string name="cprn5lWuEDc" translatable="false">Online \u0026 Internet</string>
    <string name="delete_title_menu">Delete</string>
    <string name="delivery_title">Delivery</string>
    <string name="email_already_taken">Email is already taken</string>
    <string name="email_fail_sent">Couldn\'t find an account associated with this email!</string>
    <string name="email_sent">Password sent to your email address</string>
    <string name="fav_error">An error has occurred while setting commerce as favorite</string>
    <string name="forgot_password">forgot password?</string>
    <string name="have_account">I already have an account</string>
    <string name="invalid_token_message">Token has expired.\nPlease login again.</string>
    <string name="language_spinner_title">Select language</string>
    <string name="link_title">Webpage</string>
    <string name="loading">Loading</string>
    <string name="locations_title">Locations</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="me">Me</string>
    <string name="logout_ok">Log Out</string>
    <string name="member_since">Since %1s</string>
    <string name="message_sent_error">Failed</string>
    <string name="message_sent_uploading">Uploading</string>
    <string name="message_sent_downloading">Downloading</string>
    <string name="message_sent_sending">Sending</string>
    <string name="message_sent">Sent</string>
    <string name="mute_title_menu">Mute</string>
    <string name="name_already_taken">Name is already taken</string>
    <string name="no_messages">No Messages</string>
    <string name="no_messages_description_one">When you have messages\nyou\'ll see them here</string>
    <string name="no_user_registered">Your email or password is incorrect. Try again.</string>
    <string name="number_of_followers" translatable="false">Favs</string>
    <string name="open_on_title">Open</string>
    <string name="picture">Image</string>
    <string name="preferences__account">My Account</string>
    <string name="preferences__profile">Profile</string>
    <string name="preferences__status">Status</string>
    <string name="preferences__category">Categories</string>
    <string name="preferences__link" translatable="false">ConversaLink</string>
    <string name="preferences__chats" translatable="false">Chats</string>
    <string name="preferences__help">Help &amp; Support</string>
    <string name="preferences__notifications">Notifications &amp; Sounds</string>
    <string name="preferences__view">View &amp; Share my ConversaLink</string>
    <string name="privacy_politics_preference">Privacy Policy</string>
    <string name="profile_conversa_time_info_message">ConversaTime is the schedule by which we will be answering you through chat, but our goal is to serve 24hrs.</string>
    <string name="profile_conversa_time_info_title">What is ConversaTime?</string>
    <string name="profile_day_five">F</string>
    <string name="profile_day_four">Th</string>
    <string name="profile_day_one">M</string>
    <string name="profile_day_seven">Su</string>
    <string name="profile_day_six">S</string>
    <string name="profile_day_three">W</string>
    <string name="profile_day_two">T</string>
    <string name="token_expired_error">Token expired!</string>
    <string name="test_string">test string</string>
    <string name="terms_of_use_preference">Terms &amp; Conditions</string>
    <string name="summary_go_intent_preference">Conversa Official Site</string>
    <string name="string_signin_sign_up_business_two">BUSINESS? CLICK HERE</string>
    <string name="string_signin_sign_up_business_one">LOOKING TO SIGN UP YOUR</string>
    <string name="string_signin_are_you_new">ARE YOU NEW HERE?</string>
    <string name="string_signin_already_have_an_account">ALREADY HAVE AN ACCOUNT</string>
    <string name="chats_share_conversalink">Share my ConversaLink</string>
    <string name="special_promo_title">Special promo</string>
    <string name="signup_password_regex_error">Password should contain at least one letter, one digit and a special character</string>
    <string name="settings_using_conversa">I\'m using Conversa</string>
    <string name="settings_using_conversa_text">Chat now with %1$s, follow the link: %2$s</string>
    <string name="settings_title_menu">Account</string>
    <string name="settings_share_conversa">How do you want to share?</string>
    <string name="settings_body_conversa">I been using Conversa and I really like it (: Go to the Play Store and download it!</string>
    <string name="settings">Settings</string>
    <string name="sett_preferences_default_title">Title</string>
    <string name="sett_preferences_default_description">Description</string>
    <string name="sett_help_feedback_title">Feedback</string>
    <string name="sett_help_support_title">Technical Support</string>
    <string name="sett_help_terms_privacy_title">Terms &amp; Privacy</string>
    <string name="sett_help_support_message">Issues with the app or something isn\'t running smoothly, chat with tech support</string>
    <string name="sett_notification_sound_title">Sound</string>
    <string name="sett_notification_sound_summary">Play when receiving a notification</string>
    <string name="sett_notification_push_title">Push notifications</string>
    <string name="sett_notification_preview_title">Preview</string>
    <string name="sett_notification_preview_summary">Show notification</string>
    <string name="sett_notification_inapp_title">In-App notifications</string>
    <string name="sett_notification_inapp_sound_summary">Play when receiving a message</string>
    <string name="sett_notification_inapp_preview_summary">Show notification</string>
    <string name="sett_chat_quality_title">Upload quality</string>
    <string name="sett_chat_quality_default_entry">High</string>
    <string name="sett_chat_message_title">Messages</string>
    <string name="sett_chat_sound_title">Sound</string>
    <string name="sett_chat_message_sent_sound">Sound when sending</string>
    <string name="sett_chat_message_received_sound">Sound when receiving</string>
    <string name="sett_chat_message_sound_message">Play sound inside chat</string>
    <string name="sett_chat_message_quality">Sending images with higher quality uses more data</string>
    <string name="sett_account_privacy_title">Privacy</string>
    <string name="sett_account_password_title">Password</string>
    <string name="sett_account_logout_title">Log Out</string>
    <string name="sett_account_email_title">Email</string>
    <string name="sett_account_email_summary">Email address linked to this account</string>
    <string name="sett_account_clear_recent_title">Clear recent searches</string>
    <string name="sett_account_blocked_title">Blocked</string>
    <string name="sett_account_blocked_summary">Manage blocked users</string>
    <string name="sett_account_account_title">Account</string>
    <string name="selected_count">%1$d selected</string>
    <string name="select_location">Select the location your message will be delivered</string>
    <string name="search_title_menu">Search</string>
    <string name="search_no_results_found">No results found</string>
    <string name="search_results_error" translatable="false">Oops, I did it again</string>
    <string name="schedule_title">ConversaTime</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="recent_searches_ok">Clean</string>
    <string name="recent_searches_message">Do you want to clear your recent searches?</string>
    <string name="profile_no_website_message">Working on website</string>
    <string name="profile_no_number_message">No number available</string>
    <string name="profile_location_online_location">We are only present online</string>
    <string name="profile_location_one_location">We have one location, check it out on the map</string>
    <string name="profile_location_multiple_location">We have multiple locations, check them out on the map</string>
    <string name="profile_locations_info_message">When a business has a physical address, you can check out on the map and easily drive from where you are</string>
    <string name="sett_language_default_option">Default</string>
    <string name="preferences__language">Language</string>
    <string name="signup_birthday_empty_error">Please select your birthday</string>
    <string name="signup_birthday_old_error">You must be at least 13 years old to use Conversa</string>
    <string name="signup_register_error">Sorry, this email is already being used by another user, try with another</string>
    <string name="signup_birthday_invalid_error">Invalid birthday date</string>
    <string name="send_password">Recover</string>
    <string name="FORGOT_PASSWORD">Forgot password</string>
    <string name="profile_go_location">Go</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="signup_password_empty_error">Password is required</string>
    <string name="search_toolbar_hint">Search business, stores, etc.</string>
    <string name="recent_searches_title">Recent searches</string>
    <string name="searches_top_results_title">Top results</string>
    <string name="no_internet_connection_retry">Retry</string>
    <string name="is_typing">typing&#8230;</string>
    <string name="sett_chat_download_automatically_summary">Automatically download media when received</string>
    <string name="sett_chat_download_automatically_title">Download media</string>
    <string name="signin_title_message">LET YOUR CUSTOMERS TALK\nTO YOU IN A SIMPLER WAY</string>
    <string name="skip">Skip</string>
    <string name="check">search</string>
    <string name="finish">register</string>
    <string name="reclaim">reclaim</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="business_name">BUSINESS NAME</string>
    <string name="my_name">MY NAME</string>
    <string name="my_job">JOB TITLE</string>
    <string name="contact">CONTACT NUMBER</string>
    <string name="check_message_title">Type the business name \nto verify if it\'s already \nregistered in Conversa \nif it\'s not, you can proceed \nto register it.</string>
    <string name="signup_terms_policies_warning">By signing up you are accepting our\nterms and privacy policies</string>
    <string name="reclaim_message_title">This business is registered \nproceed to reclaim it by filling \nthe information below requested.</string>
</resources>