<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white"
	tools:context="ee.app.conversamanager.ActivitySignIn" >

	<ImageView
		android:id="@+id/ivConversa"
		android:layout_width="165dp"
		android:layout_height="165dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="?attr/actionBarSize"
		android:contentDescription="@null"
		android:scaleType="centerInside"
		android:src="@drawable/im_logo" />

	<ee.app.conversamanager.view.BoldTextView
		android:id="@+id/ltvSecondUnderTitle"
		android:layout_below="@id/ivConversa"
		android:layout_marginTop="14dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textAllCaps="true"
		android:text="@string/signin_title_message"
		android:textColor="@color/light_dark_gray"
		android:textSize="15sp" />

	<RelativeLayout
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/ltvSecondUnderTitle" >

		<ee.app.conversamanager.view.BoldTextView
			android:id="@+id/btvSignUpInfo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:text="@string/string_signin_are_you_new"
			android:textColor="@color/black"
			android:textSize="13sp" />
		<Button
			android:id="@+id/btnSignUp"
			android:layout_width="170dp"
			android:layout_height="40dp"
			android:layout_marginTop="7dp"
			android:text="@string/SIGN_UP"
			android:layout_centerHorizontal="true"
			android:textColor="@drawable/textcolor_white_state"
			android:textSize="13sp"
			android:layout_below="@id/btvSignUpInfo"
			android:background="@drawable/button_shape_white" />
		<ee.app.conversamanager.view.BoldTextView
			android:id="@+id/tvAlready"
			android:layout_below="@id/btnSignUp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:layout_centerHorizontal="true"
			android:maxLines="1"
			android:text="@string/string_signin_already_have_an_account"
			android:textColor="@color/black"
			android:textSize="13sp" />
		<Button
			android:id="@+id/btnSignIn"
			android:layout_width="170dp"
			android:layout_height="40dp"
			android:layout_marginTop="7dp"
			android:layout_below="@id/tvAlready"
			android:gravity="center"
			android:text="@string/SIGN_IN"
			android:layout_centerHorizontal="true"
			android:textColor="@drawable/textcolor_purple_state"
			android:textSize="13sp"
			android:background="@drawable/button_shape_purple_border" />
	</RelativeLayout>

	<ImageView
		android:id="@+id/ivLanguage"
		android:scaleType="centerInside"
		android:src="@drawable/ic_language"
		android:layout_alignParentTop="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_marginRight="6dp"
		android:layout_marginEnd="6dp"
		android:layout_marginTop="6dp"
		android:padding="10dp"
		android:layout_width="45dp"
		android:layout_height="45dp" />

</RelativeLayout>