<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/actionbar_preference"/>

    <ScrollView
        android:padding="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ee.app.conversabusiness.view.MediumTextView
                android:text="@string/sett_chat_message_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:id="@+id/llQualityUpload"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight">
                <ee.app.conversabusiness.view.RegularTextView
                    android:text="@string/sett_chat_quality_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ee.app.conversabusiness.view.LightTextView
                    android:text="@string/sett_chat_quality_default_entry"
                    android:id="@+id/ltvQualitySummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <RelativeLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight">
                <ee.app.conversabusiness.view.RegularTextView
                    android:text="@string/sett_chat_message_sent_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/scSoundSending"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <View
                android:background="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <RelativeLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight">
                <ee.app.conversabusiness.view.RegularTextView
                    android:text="@string/sett_chat_message_received_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/scSoundReceiving"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>