<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_white"
	android:focusableInTouchMode="true"
	android:gravity="center_horizontal"
    tools:context="ee.app.conversabusiness.ActivityForgotPassword" >

	<ee.app.conversabusiness.view.BoldTextView
		android:id="@+id/btvTitle"
		android:text="@string/FORGOT_PASSWORD"
		android:layout_marginTop="40dp"
		android:textSize="18sp"
		android:textColor="@color/default_black"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<android.support.design.widget.TextInputLayout
		android:layout_marginTop="14dp"
		android:layout_below="@id/btvTitle"
		android:id="@+id/tilPasswordForgot"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="14dp" >

		<EditText
			android:id="@+id/etSendEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@null"
			android:gravity="bottom"
			android:hint="@string/email"
			android:inputType="textEmailAddress"
			android:textColor="@color/default_black"
			android:textColorHint="@color/default_gray"
			android:textSize="18sp" />
	</android.support.design.widget.TextInputLayout>

	<Button
		android:layout_below="@id/tilPasswordForgot"
		android:id="@+id/btnSendPassword"
		android:layout_width="170dp"
		android:layout_height="35dp"
		android:layout_marginTop="7dp"
		android:text="@string/send_password"
		android:layout_centerHorizontal="true"
		android:textColor="@drawable/textcolor_white_state"
		android:textSize="15sp"
		android:background="@drawable/button_shape_white" />

	<include android:id="@+id/rlNoInternetNotification"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		layout="@layout/no_internet_notification" />

</RelativeLayout>