<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true" >

    <RelativeLayout
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ee.app.conversamanager.view.RegularTextView
            android:id="@+id/tvMessage"
            android:gravity="center"
            android:text="@string/reclaim_message_title"
            android:textSize="17sp"
            android:textColor="@color/light_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            android:layout_below="@id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyTheme.Gray"
            android:padding="14dp" >

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:hint="@string/my_name"
                android:maxLines="1"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_below="@id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyTheme.Gray"
            android:padding="14dp" >

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:hint="@string/email"
                android:maxLines="1"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilJob"
            android:layout_below="@id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyTheme.Gray"
            android:padding="14dp" >

            <EditText
                android:id="@+id/etJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:hint="@string/my_job"
                android:maxLines="1"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNumber"
            android:layout_below="@id/tilJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyTheme.Gray"
            android:padding="14dp" >

            <EditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:hint="@string/contact"
                android:maxLines="1"
                android:maxLength="8"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnReclaim"
            android:layout_width="175dp"
            android:layout_height="35dp"
            android:layout_below="@id/tilNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/reclaim"
            android:textColor="@drawable/textcolor_white_state"
            android:textSize="14sp"
            android:background="@drawable/button_shape_white" />

    </RelativeLayout>

</ScrollView>